--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
                     
                     <div>
                         <h3 class="text-xl font-bold mb-6">Send a Message</h3>
-                        <form action="https://getform.io/f/YOUR_GETFORM_LINK_HERE" method="POST" class="space-y-4">
+                        <form action="https://getform.io/f/amdmokrb" method="POST" class="space-y-4">
                             <div>
                                 <label class="block text-slate-300 mb-2">Name</label>
                                 <input type="text" name="name" required placeholder="Your Name"
